check all files after playing with data

--- a/mix_clones/puumala_mix_clones_analysis.rmd
+++ b/mix_clones/puumala_mix_clones_analysis.rmd
@@ -1,6 +1,8 @@
 ---
 title: "R analysis of Puumala project, clones mix"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 
